# seva-zaika-SDK

./: LICENSE  README.md  design.md  setup.cfg
src/seva_zaika_sdk/: __init__.py  base.py  book.py  character.py  client.py  exceptions.py  movie.py  quote.py
tests/: conftest.py  test_base_client_usage_get_book.yaml  test_base_client_usage_get_book_chapters.yaml  test_base_client_usage_get_books.yaml  test_base_client_usage_get_chapter.yaml  test_base_client_usage_get_chapters.yaml  test_base_client_usage_get_character.yaml  test_base_client_usage_get_character_quotes.yaml  test_base_client_usage_get_characters.yaml  test_base_client_usage_get_movie_quotes.yaml  test_base_client_usage_get_movies.yaml  test_base_client_usage_get_quotes.yaml  test_book_model.yaml  test_chapter_model.yaml  test_character_model.yaml  test_character_model_filters_and_sorting.yaml  test_movie_model.yaml  test_quote_model.yaml  test_sdk_advanced_usage.py  test_sdk_basic_usage.py
