[metadata]
name = seva-zaika-SDK
version = 0.0.2
author = Seva Zaika
author_email = d@d.kiev.ua
description = LOTR API SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vsevolod-kolchinsky/seva-zaika-SDK
project_urls =
    Bug Tracker = https://github.com/vsevolod-kolchinsky/seva-zaika-SDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
